examples/error-codes/syntax-error/SE-TCANON2-good.c
int main(void) {
  char* restrict p;
  return 0;
}
